fix font and button alignment

--- a/css.css
+++ b/css.css
@@ -104,6 +104,10 @@ nav img {
 }
 
 #language_selector {
+  font: inherit;
+  background-color: var(--bg-color);
+  color: var(--txt-color);
+
   cursor: pointer;
   position: absolute;
 
@@ -146,6 +150,7 @@ nav img {
   background: var(--bg-alt-color);
   border: 1px solid var(--border-color);
   border-radius: 0.25rem;
+  margin: 0 auto;
   padding: 0.25rem 0.5rem;
   cursor: pointer;
   transition: background 0.2s, color 0.2s, border-color 0.2s;
